--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.4",
     "@chakra-ui/core": "^0.5.2",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
@@ -32,6 +33,7 @@
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@graphql-codegen/typescript-urql": "^2.0.2",
     "@types/node": "^14.11.5",
+    "@urql/devtools": "^2.0.2",
     "typescript": "^4.0.3"
   }
 }
