--- a/codegen.yml
+++ b/codegen.yml
@@ -2,8 +2,8 @@ overwrite: true
 schema: 'http://localhost:8080/api'
 documents: 'src/graphql/**/*.graphql'
 generates:
-    src/generated/graphql.tsx:
-        plugins:
-            - 'typescript'
-            - 'typescript-operations'
-            - 'typescript-urql'
+  src/generated/graphql.tsx:
+    plugins:
+      - 'typescript'
+      - 'typescript-operations'
+      - 'typescript-react-apollo'
