--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@graphql-codegen/cli": "1.17.10",
     "@graphql-codegen/typescript": "1.17.10",
     "@graphql-codegen/typescript-operations": "1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "^2.0.7",
     "@graphql-codegen/typescript-urql": "^2.0.2",
     "@types/node": "^14.11.5",
     "@urql/devtools": "^2.0.2",
