--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^15.3.0",
     "moment": "^2.29.1",
     "next": "^9.1.7",
+    "next-apollo": "^5.0.0",
     "next-urql": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
