--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.4",
+    "@apollo/react-ssr": "^4.0.0",
     "@chakra-ui/core": "^0.5.2",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@types/graphql": "^14.5.0",
     "@urql/exchange-graphcache": "^3.1.4",
+    "apollo-link-token-refresh": "^0.3.2",
+    "cookie": "^0.4.1",
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.7",
     "graphql": "^15.3.0",
+    "jwt-decode": "^3.1.1",
     "moment": "^2.29.1",
     "next": "^9.1.7",
     "next-apollo": "^5.0.0",
@@ -34,6 +38,8 @@
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@graphql-codegen/typescript-react-apollo": "^2.0.7",
     "@graphql-codegen/typescript-urql": "^2.0.2",
+    "@types/cookie": "^0.4.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^14.11.5",
     "@urql/devtools": "^2.0.2",
     "typescript": "^4.0.3"
